# deeplearning

./: Practice.py  pyproject.toml  test.py  test2.py  test3.py  test4.py
tensorflow_v2/notebooks/1_Introduction/: basic_operations.ipynb
